# slack-archive-browser

./: Cargo.toml
src/: error.rs  main.rs  simple_cache.rs
src/reader/: messages.rs  mod.rs  timestamp.rs  user.rs
src/reader/test_data/: msg_test.json
src/ui/: index.rs  mod.rs  select_date.rs  view_day.rs
static/: styles.css
templates/: channels.tera  index.tera  layout.tera  messages.tera  select_date.tera  username.tera  view_day.tera
